<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.googlemais.jocsa.googlemais.apresentacaoActivity">


    <!--COMEÇO DO LAYOUT PAGINA DE PREPARAÇÃO-->
    <RelativeLayout
        android:id="@+id/rlPreparacao"
        android:visibility="visible"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true">

        <ImageView
            android:id="@+id/imAndroid"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/android"
            android:layout_centerHorizontal="true"/>

        <TextView
            android:layout_below="@id/imAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:textSize="35sp"
            android:textAlignment="center"
            android:text="Conheça 5 coisa que você provavelmente não sabia sobre Android"
            />



    </RelativeLayout>
    <!--FIM DO LAYOUT PAGINA DE PREPARAÇÃO-->

    <!--COMEÇO DO LAYOUT DA PRIMEIRA PÁGINA-->
    <RelativeLayout
        android:id="@+id/rl1"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:id="@+id/rlWithIvAndyRubin"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:id="@+id/ivAndyRubin"
                android:layout_width="wrap_content"
                android:layout_height="150dp"
                android:src="@drawable/andyrubin"
                android:scaleType="centerCrop"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/rlWithIvAndyRubin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
            android:id="@+id/sv1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:id="@+id/tvOcriador"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:layout_marginTop="4dp"
                    android:layout_marginLeft="4dp"
                    android:text="O criador do Android!"/>

                <TextView
                    android:id="@+id/tvTextoParte1"
                    android:layout_below="@id/tvOcriador"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoFl1_parte1"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:id="@+id/tvTextoParte2"
                    android:layout_below="@id/tvTextoParte1"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoFl1_parte2"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:layout_margin="4dp"/>

                <TextView
                    android:layout_below="@id/tvTextoParte2"
                    android:layout_marginTop="10dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="@string/textoFl1_parte3"
                    android:textAlignment="center"
                    android:textSize="17sp"
                    android:layout_margin="4dp"
                    android:paddingBottom="10dp"/>


            </RelativeLayout>

        </ScrollView></RelativeLayout>

    </RelativeLayout>
    <!--FIM DO LAYOUT DA PRIMEIRA PÁGINA-->

    <!--COMEÇO DO LAYOUT DA SEGUNDA PÁGINA-->
    <RelativeLayout
        android:id="@+id/rl2"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:id="@+id/rlWithIvPage3Camera"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:scaleType="centerCrop"
                android:src="@drawable/androidemcamera"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/rlWithIvPage3Camera"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPage2Tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="Android para câmera!"/>

                    <TextView
                        android:id="@+id/tvPage2Texto1"
                        android:layout_below="@id/tvPage2Tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:text="@string/textoRl2_parte1"
                        android:layout_marginBottom="4sp"/>


                    <TextView
                        android:layout_below="@id/tvPage2Texto1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textAlignment="center"
                        android:textSize="17sp"
                        android:text="@string/textoRl2_parte2"/>

                </RelativeLayout>


            </ScrollView>


        </RelativeLayout>


    </RelativeLayout>
    <!--FIM DO LAYOUT DA SEGUNDA PÁGINA-->

    <!--COMEÇO DO LAYOUT DA TERCEIRA PÁGINA-->
    <RelativeLayout
        android:id="@+id/rl3"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:id="@+id/rlWithIvNamesAndroid"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/versoesandroid"
                android:scaleType="fitCenter"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/rlWithIvNamesAndroid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvTextoRl3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:layout_marginTop="10dp"
                        android:layout_marginLeft="4dp"
                        android:textAlignment="center"
                        android:text="@string/textoRl3"
                        android:layout_marginBottom="3dp"/>

                    <ScrollView
                        android:layout_below="@id/tvTextoRl3"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:src="@drawable/versoesandroidmaior"/>

                    </ScrollView>

                </RelativeLayout>

            </ScrollView>


        </RelativeLayout>


    </RelativeLayout>
    <!--FIM DO LAYOUT DA PRIMEIRA PÁGINA-->

    <!--COMEÇO DO LAYOUT DA QUARTA PÁGINA-->
    <RelativeLayout
        android:id="@+id/rl4"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:id="@+id/rlWithIvAndroidEveryWhere"
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:layout_marginBottom="4sp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/androideverywhere"
                android:scaleType="centerCrop"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/rlWithIvAndroidEveryWhere"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPage4Tittle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:textSize="20sp"
                        android:text="Android além de smartphones!"
                        android:layout_marginBottom="4sp"/>

                    <TextView
                        android:id="@+id/tvPage4Texto1"
                        android:layout_below="@id/tvPage4Tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textAlignment="center"
                        android:text="@string/textoRl4_parte1"
                        android:layout_marginBottom="4dp"/>


                    <TextView
                        android:id="@+id/tvPage4Texto2"
                        android:layout_below="@id/tvPage4Texto1"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textAlignment="center"
                        android:text="@string/textoRl4_parte2"
                        android:layout_marginBottom="4dp"/>


                    <TextView
                        android:layout_below="@id/tvPage4Texto2"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="14sp"
                        android:textAlignment="center"
                        android:text="@string/textoRl4_parte3"
                        android:autoLink="web"/>


                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>


    </RelativeLayout>
    <!--FIM DO LAYOUT DA QUARTA PÁGINA-->

    <!--COMEÇO DO LAYOUT DA QUINTA PÁGINA-->
    <RelativeLayout
        android:id="@+id/rl5"
        android:visibility="gone"
        android:layout_width="match_parent"
        android:layout_height="400dp">

        <RelativeLayout
            android:id="@+id/rlWithIvGoogleIO"
            android:layout_width="match_parent"
            android:layout_height="150dp">

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:src="@drawable/googleio"
                android:scaleType="centerCrop"/>
        </RelativeLayout>

        <RelativeLayout
            android:layout_below="@id/rlWithIvGoogleIO"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tvPage5Tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="4sp"
                        android:layout_marginBottom="4sp"
                        android:textSize="22sp"
                        android:textAlignment="center"
                        android:text="Google I/O \nO maior evento do ano!"/>

                    <TextView
                        android:id="@+id/tvPage5Texto"
                        android:layout_below="@id/tvPage5Tittle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="17sp"
                        android:textAlignment="center"
                        android:text="@string/textRl5"/>

                    <ImageView
                        android:id="@+id/iv1Page5"
                        android:layout_below="@id/tvPage5Texto"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/googleio1"/>

                    <ImageView
                        android:id="@+id/iv2Page5"
                        android:layout_below="@id/iv1Page5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/googleio2"/>

                    <ImageView
                        android:layout_below="@id/iv2Page5"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:src="@drawable/googleio3"/>


                </RelativeLayout>

            </ScrollView>

        </RelativeLayout>


    </RelativeLayout>
    <!--FIM DO LAYOUT DA QUINTA PÁGINA-->


    <!--COMEÇO DO LAYOUT DO BOTÃO INICIAL/PROXIMO-->
    <RelativeLayout
        android:id="@+id/rlButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/rlPreparacao">

        <LinearLayout
            android:gravity="center"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/rlButtonPrevious"
                android:visibility="gone"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">

                <Button
                    android:id="@+id/btPrincipalPrevious"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="15sp"
                    android:text="Voltar"
                    android:onClick="voltarTela"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="70dp">

                <Button
                    android:id="@+id/btPrincipalNext"
                    android:layout_width="150dp"
                    android:layout_height="50dp"
                    android:layout_marginTop="20dp"
                    android:layout_centerHorizontal="true"
                    android:textSize="15sp"
                    android:text="Iniciar"
                    android:onClick="proximaTela"
                    android:textColor="@android:color/white"
                    android:background="@color/colorPrimary"/>
            </RelativeLayout>



        </LinearLayout>

    </RelativeLayout>
    <!--FIM DO LAYOUT DO BOTÃO INICIAL/PROXIMO-->


</RelativeLayout>
